Openshift/hyptopsrv.yaml
apiVersion: v1
kind: Service
metadata:
  name: hyptopmetric
  namespace: <your namespace>
  labels:
    app: hyptopmetric
spec:
  type: ExternalName
  externalName: <hyptop metric server DNS name>
  ports:
    - name: metrics
      port: 9105
      protocol: TCP
      targetPort: 9105
